Fix quality flaw - don't use deprecated method and fix generics